--- a/src/app/components/home/settings/settings.component.html
+++ b/src/app/components/home/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <form [formGroup]="signUpForm" (ngSubmit)="submit()" novalidate>
+  <form [formGroup]="updateForm" (ngSubmit)="submit()" novalidate>
     <div class="spinner" *ngIf="showSpinner">
       <app-spinner></app-spinner>
     </div>
@@ -22,12 +22,12 @@
                 formControlName="name"
                 [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.FIRSTNAMEINPUT' | translate"
                 [ariaLabelledBy]="'required-message-firstname'"
-                [control]="signUpForm.controls['name']"
+                [control]="updateForm.controls['name']"
                 [submitted]="submitted"
-                [error]="this.signUpForm.get('name')!.hasError('required')"
+                [error]="this.updateForm.get('name')!.hasError('required')"
               >
               </app-input>
-              <p id="required-message-firstname" *ngIf="this.signUpForm.get('name')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_FIRSTNAME' | translate}}</p>
+              <p id="required-message-firstname" *ngIf="this.updateForm.get('name')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_FIRSTNAME' | translate}}</p>
             </div>
             <div class="row">
               <app-label
@@ -41,12 +41,12 @@
                 formControlName="lastName"
                 [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.LASTNAMEINPUT' | translate"
                 [ariaLabelledBy]="'required-message-lastname'"
-                [control]="signUpForm.controls['lastName']"
+                [control]="updateForm.controls['lastName']"
                 [submitted]="submitted"
-                [error]="this.signUpForm.get('lastName')!.hasError('required')"
+                [error]="this.updateForm.get('lastName')!.hasError('required')"
               >
               </app-input>
-              <p id="required-message-lastname" *ngIf="this.signUpForm.get('lastName')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_LASTNAME' | translate}}</p>
+              <p id="required-message-lastname" *ngIf="this.updateForm.get('lastName')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_LASTNAME' | translate}}</p>
             </div>
           </div>
           <app-label
@@ -61,13 +61,13 @@
             [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.EMAILINPUT' | translate"
             [ariaLabelledBy]="'required-message-email format-message-email'"
             [isDisabled]="true"
-            [control]="signUpForm.controls['email']"
+            [control]="updateForm.controls['email']"
             [submitted]="submitted"
-            [error]="this.signUpForm.get('email')!.hasError('required') || this.signUpForm.get('email')!.hasError('email')"
+            [error]="this.updateForm.get('email')!.hasError('required') || this.updateForm.get('email')!.hasError('email')"
           >
           </app-input>
-          <p id="required-message-email" *ngIf="this.signUpForm.get('email')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_EMAIL' | translate}}</p>
-          <p id="format-message-email" *ngIf="this.signUpForm.get('email')!.hasError('email') && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_EMAIL' | translate}}</p>
+          <p id="required-message-email" *ngIf="this.updateForm.get('email')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_EMAIL' | translate}}</p>
+          <p id="format-message-email" *ngIf="this.updateForm.get('email')!.hasError('email') && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_EMAIL' | translate}}</p>
           <div class="split-row">
             <div class="row">
               <app-label
@@ -81,14 +81,14 @@
                 formControlName="password"
                 [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.PASSWORDINPUT' | translate"
                 [ariaLabelledBy]="'required-message-password format-message-password different-message-password'"
-                [control]="signUpForm.controls['password']"
+                [control]="updateForm.controls['password']"
                 [submitted]="submitted"
-                [error]="this.signUpForm.get('password')!.hasError('required') || this.signUpForm.get('password')!.value.length<8 || this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value"
+                [error]="this.updateForm.get('password')!.hasError('required') || this.updateForm.get('password')!.value.length<8 || this.updateForm.get('passwordConfirm')!.value != this.updateForm.get('password')!.value"
               >
               </app-input>
               <!-- <p id="required-message-password" *ngIf="this.signUpForm.get('password')!.hasError('required') && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_PASSWORD' | translate}}</p> -->
-              <p id="format-message-password" *ngIf="this.signUpForm.get('password')!.value.length<8 && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_TEXT_LENGTH' | translate}}</p>
-              <p id="different-message-password" *ngIf="this.signUpForm.get('passwordConfirm')!.value != this.signUpForm.get('password')!.value  && submitted" class="error-field">{{'INPUT_ERRORS.DIFERENT_PASSWORD' | translate}}</p>
+              <p id="format-message-password" *ngIf="this.updateForm.get('password')!.value.length<8 && submitted" class="error-field">{{'INPUT_ERRORS.INVALID_TEXT_LENGTH' | translate}}</p>
+              <p id="different-message-password" *ngIf="this.updateForm.get('passwordConfirm')!.value != this.updateForm.get('password')!.value  && submitted" class="error-field">{{'INPUT_ERRORS.DIFERENT_PASSWORD' | translate}}</p>
             </div>
             <div class="row">
               <app-label
@@ -103,12 +103,12 @@
                 formControlName="passwordConfirm"
                 [ariaLabelContent]="'HOME.MENU.SETTINGS.ACCESIBILITY.CONFIRMPASSWORDINPUT' | translate"
                 [ariaLabelledBy]="'required-message-confirm-password'"
-                [control]="signUpForm.controls['passwordConfirm']"
+                [control]="updateForm.controls['passwordConfirm']"
                 [submitted]="submitted"
-                [error]="this.signUpForm.get('passwordConfirm')!.value==''"
+                [error]="this.updateForm.get('passwordConfirm')!.value==''"
               >
               </app-input>
-              <p id="required-message-confirm-password" *ngIf="this.signUpForm.get('passwordConfirm')!.value=='' && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_CONFIRM_PASSWORD' | translate}}</p>
+              <p id="required-message-confirm-password" *ngIf="this.updateForm.get('passwordConfirm')!.value=='' && submitted" class="error-field">{{'INPUT_ERRORS.REQUIRED_CONFIRM_PASSWORD' | translate}}</p>
             </div>
           </div>
         </div>
